# HYDROLIB-core

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  debug.py  debug2.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  sonar-project.properties  test.nc  test.txt  versions.json
.2.0/: index.html  sitemap.xml
.2.1/: objects.inv  sitemap.xml
.2.1/search/: search_index.json
.2.1/topics/: dhydro_support_hydrolib-core.xlsx
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  task.md  task.yml
.github/workflows/: ci.yml  docs.yml  docs_release.yml  integration.yml  mkdocs-deploy.yml  release.yml  tests.yml  wheel-test.yml
0.1.1/: index.html  objects.inv  sitemap.xml
0.1.1/changelog/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html
0.1.2/changelog/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  sitemap.xml
0.1.3/changelog/: index.html
0.1.3/search/: search_index.json
0.1.4/: 404.html  objects.inv
0.1.4/changelog/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html
0.1.5/changelog/: index.html
0.1.5/search/: search_index.json
0.10.1/changelog/: index.html
0.3.0/search/: search_index.json
0.3.1/: objects.inv  sitemap.xml
0.4.0/: 404.html  sitemap.xml
0.4.1/: sitemap.xml
0.4.1/search/: search_index.json
0.5.1/: sitemap.xml
0.5.1/changelog/: index.html
0.5.1/releasenotes/: index.html
0.5.1/search/: search_index.json
0.5.2/: index.html
0.5.2/changelog/: index.html
0.5.2/search/: search_index.json
0.5.2/topics/: dhydro_support_hydrolib-core.xlsx
0.8.1/search/: search_index.json
0.9.0/: 404.html  index.html  objects.inv
0.9.0/search/: search_index.json
0.9.1/: 404.html  objects.inv
0.9.1/changelog/: index.html
0.9.1/email_announcement_v0.9/: index.html
0.9.1/overrides/: main.html
0.9.1/search/: search_index.json
0.9.2/: index.html  objects.inv
0.9.2/search/: search_index.json
0.9.2/tutorials/: Tutorial_1d2d_fluvial_flood_model_for_Magdalena.ipynb
0.9.3/: 404.html  index.html  objects.inv
0.9.3/changelog/: index.html
0.9.3/search/: search_index.json
0.9.4/: objects.inv
0.9.4/changelog/: index.html
0.9.4/search/: search_index.json
0.9.4/tutorials/: Tutorial_1d2d_fluvial_flood_model_for_Magdalena_with_answers.ipynb
0.9.5/: objects.inv
0.9.5/changelog/: index.html
0.9.5/search/: search_index.json
0.9.6/changelog/: index.html
0.9.6/search/: search_index.json
0.9.7/changelog/: index.html
0.9.7/releasenotes/: index.html
0.9.7/search/: search_index.json
0.9.8/: 404.html  index.html
0.9.8/changelog/: index.html
0.9.8/search/: search_index.json
0.9.9/: index.html  objects.inv
0.9.9/search/: search_index.json
1.0.0/: objects.inv
1.0.0/changelog/: index.html
1.0.0/search/: search_index.json
1.0.1/: index.html  objects.inv
1.0.1/stylesheets/: extra.css
binder/: Dockerfile  README.md  environment.yml  generate_requirements.py  requirements.txt
changelog/: index.html
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/changelog/: index.html
develop/migration/: index.html
develop/mo/: architecture.drawio  diagramasdasd.drawio  diagramsdf.drawio
develop/releasenotes/: index.html
develop/search/: search_index.json
develop/stylesheets/: mermaid-custom.css
develop/topics/: ~$dhydro_support_hydrolib-core.xlsx
develop/tutorials/: build_basic_model.ipynb
docs/: changelog.md  index.md  migration.md  migration_plan.md  migration_summary.md  releasenotes.md
docs/guides/: contributing.md  devcontainers.md  developers-guide.md  developers.md  documentation.md  getting-help.md  gettinghelp.md  poetry.md  release-workflow.md  setup.md
docs/overrides/: main.html
docs/reference/: api.md  bui.md  crosssection.md  dimr.md  ext.md  external_forcing_conversion.md  forcing.md  friction.md  glossary.md  gui.md  ini.md  inifield.md  mdu.md  net.md  obs.md  onedfield.md  polyfile.md  rr.md  storagenode.md  structure.md  structures.md  tim.md  xyn.md  xyz.md
docs/stylesheets/: extra.css
docs/tools/: prof_to_cross.md  tools.md
docs/topics/: bubble-screen.md  dhydro_support.md  dhydro_support_hydrolib-core.xlsx  loadsave.md  principles.md  pydantic.md
docs/tutorials/: Tutorial_1d2d_fluvial_flood_model_for_Magdalena.ipynb  Tutorial_1d2d_fluvial_flood_model_for_Magdalena_with_answers.ipynb  build_basic_model.ipynb  dataframe_handling.md  first_steps.ipynb  loading_and_saving_a_model.md  plotting_a_network.md  steps.md  tutorials.md
guides/contributing/: index.html
guides/devcontainers/: index.html
guides/documentation/: index.html
guides/poetry/: index.html
guides/setup/: index.html
hydrolib/: __init__.py  debug.py
hydrolib/core/: __init__.py  base.py  basemodel.py  baseparser.py  config.py  dimr_parser.py  mesh.py  models.py  models.py~main  utils.py
hydrolib/io/: common.py  polyfile.py
hydrolib/tools/: __init__.py  bnd_old_to_new.py  ext_bnd_items_old_to_new.py  ext_old_to_new.py  poly_file.py  prof_to_cross.py
hydrolibcore/: __init__.py  basemodel.py
latest/: 404.html  index.html
latest/changelog/: index.html
latest/email_announcement_v0.9/: index.html
latest/overrides/: main.html
latest/releasenotes/: index.html
main/: 404.html  index.html  objects.inv
main/changelog/: index.html
main/migration/: index.html
main/overrides/: main.html
main/releasenotes/: index.html
main/search/: search_index.json
main/stylesheets/: extra.css
main/tutorials/: Tutorial_1d2d_fluvial_flood_model_for_Magdalena.ipynb  Tutorial_1d2d_fluvial_flood_model_for_Magdalena_with_answers.ipynb
push/: index.html  objects.inv
push/changelog/: index.html
search/: search_index.json
tests/: 00conftest.py  conftest.py  test_basemodel.py  test_comment_types.py  test_dimr_parser.py  test_docker.py  test_filemodel.py  test_hydrolib.py  test_main.py  test_model.py  test_net.py  test_utils.py  utils.py
tests/base/: data.py  (+14 more)
(+1849 files in other folders)
