[tool.poetry]
name = "hydrolib-core"
version = "0.9.1"
description = "Python wrappers around D-HYDRO Suite."
authors = ["Deltares"]
license = "MIT"
packages = [{ include = "hydrolib" }]
readme = "README.md"
repository = "https://github.com/deltares/hydrolib-core"
documentation = "https://deltares.github.io/HYDROLIB-core"
homepage = "https://deltares.github.io/HYDROLIB-core"

[tool.poetry.urls]
"issue tracker" = "https://github.com/Deltares/HYDROLIB-core/issues"

[tool.poetry.scripts]
extforce-convert = 'hydrolib.tools.extforce_convert.cli:main'

[tool.poetry.dependencies]
python = ">=3.9,<4"
# exclude yanked netcdf versions 1.7.0 and 1.7.1, but include 1.7.2 (first with python 3.12 support)
netCDF4 = "^1.5,!=1.7.0,!=1.7.1"
# no caret here, since numpy v2 is required for future python 3.13 support, but this is not yet widely supported by packages numpy v1 support is also still required.
numpy = [
    { version = ">=1.25,<3", python = "^3.9" },
    { version = "^2.1", python = "^3.13" }
]
pydantic = "^2.5"
# lxml 5.0 is from December 2023
lxml = "^5.0"
meshkernel = "^7.0.0"
strenum = "^0"
tqdm = "^4.67.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
devtools = "^0.12.2"
commitizen = "^4.0"
isort = "^5.8"
black = "^24.8.0"
mypy = "^1.13"
openpyxl = "^3.0.9"
jinja2 = "^3.0"
markupsafe = "<2.1"
jupyter = "^1.0.0"
ipykernel = "^6.15.0"
# matplotlib >=3.8 supports numpy 2.0
matplotlib = "^3.8"
# xarray >=2024.6.0 supports numpy 2.0, but consider looser version if adding it as actual package dependencies
xarray = ">=2024.6.0"
pyfakefs = "^5.7.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.2"
mkdocs-material = "^9.5"
mkdocstrings = "^0.27.0"
pymdown-extensions = "^10.12"
mkdocs-autorefs = "^1.2"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-jupyter = "^0.25.1"
mike = "^1.1.2"
jupyter = "^1.0.0"
notebook = "^7.3.2"
mkdocstrings-python = "^1.13.0"
mkdocs-mermaid2-plugin = "^1.2.1"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.1"
tag_format = "$version"
version_files = [
  "hydrolib/core/__init__.py",
  "pyproject.toml:version",
  "tests/data/reference/dimr/test_serialize.xml:createdBy",
  "tests/data/reference/model/test_dimr_model_save.xml:createdBy",
  "tests/data/reference/crosssection/crsloc.ini:HYDROLIB-core",
]
changelog_file = "docs/changelog.md"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.flake8]
ignore = ["E501", "W503", "E731", "E203", "D401", "D102"]
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
markers = ["plots", "docker"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
