[project]
name = "hydrolib-core"
version = "1.0.0b5"
description = "Python wrappers around D-HYDRO Suite."
authors = [{name = "Deltares"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    # exclude yanked netcdf versions 1.7.0 and 1.7.1, but include 1.7.2 (first with python 3.12 support)
    "netCDF4>=1.5,<2,!=1.7.0,!=1.7.1",
    # numpy v2 is required for python 3.13 support
    "numpy>=1.25,<3; python_version < '3.13'",
    "numpy>=2.1,<3; python_version >= '3.13'",
    "pydantic>=2.5,<3",
    "lxml>=6.0,<7",
    "meshkernel>=8.1.3,<9",
    "strenum>=0,<1",
    "tqdm>=4.67.1,<5",
    "pandas>=2.0.0",
    "pyyaml>=6.0.2,<7",
    "pydantic-settings>=2.11.0,<3",
]

[project.optional-dependencies]
examples = [
    "geopandas>=1.0.0,<2",
    "openpyxl>=3.1.5,<4",
    "jupyter>=1.0.0,<2",
    "ipykernel>=7.0,<8",
]
plot = [
    "matplotlib>=3.8,<4",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "devtools>=0.12.2,<0.13",
    "commitizen>=4.0,<5",
    "isort>=6.0,<7",
    "black>=24.8.0,<25",
    "mypy>=1.13,<2",
    "jinja2>=3.0,<4",
    "markupsafe>=3.0,<4",
    # xarray >=2024.6.0 supports numpy 2.0
    "xarray>=2024.6.0",
    "pyfakefs>=6.0,<7",
    "geopandas>=1.0.0,<2",
]
docs = [
    "openpyxl>=3.1.5,<4",
    "mkdocs>=1.2,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings>=1.0,<2",
    "pymdown-extensions>=10.12,<11",
    "mkdocs-autorefs>=1.2,<2",
    "mkdocs-macros-plugin>=1.3.7,<2",
    "mkdocs-table-reader-plugin>=3.1.0,<4",
    "mkdocs-jupyter>=0.26.0,<0.27",
    "mike>=2.0.0,<3",
    "jupyter>=1.0.0,<2",
    "notebook>=7.3.2,<8",
    "mkdocstrings-python>=2.0,<3",
    "mkdocs-mermaid2-plugin>=1.2.1,<2",
    "mkdocs-panzoom-plugin>=0.4.2,<0.5",
]

[project.urls]
Repository = "https://github.com/deltares/hydrolib-core"
Documentation = "https://deltares.github.io/HYDROLIB-core"
Homepage = "https://deltares.github.io/HYDROLIB-core"
"Issue Tracker" = "https://github.com/Deltares/HYDROLIB-core/issues"

[project.scripts]
extforce-convert = "hydrolib.tools.extforce_convert.cli:main"

[tool.poetry]
packages = [{include = "hydrolib"}]
include = [
    {path = "hydrolib/tools/extforce_convert/data/**", format = "wheel"},
    {path = "hydrolib/tools/extforce_convert/data/**", format = "sdist"},
    {path = "hydrolib/core/dflowfm/extold/data/**", format = "wheel"},
    {path = "hydrolib/core/dflowfm/extold/data/**", format = "sdist"},
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0b5"
tag_format = "$version"
version_files = [
  "pyproject.toml:version",
]
changelog_file = "docs/changelog.md"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.flake8]
ignore = ["E501", "W503", "E731", "E203", "D401", "D102"]
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
markers = [
    "plots", "docker",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
    "unit: marks a test as unit test(deselect with '-m \"not unit\"')",
    "integration: marks a test as integration test (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
